# template-python-simple

./: Makefile  README.md  app.py  pyproject.toml
.circleci/: config.yml
docs/: app_name.cls_sample.rst  app_name.rst  app_name.sub.rst  conf.py  index.rst  modules.rst
main/my/: module1.py
scripts/: doc.sh
src/: app.py
src/app_name/: module1.py
src/app_name/cls_sample/: __init__.py  dog.py  owner.py  person.py
src/app_name/sub/: module2.py
tests/: test_app.py
tests/app_name/: test_module1.py
tests/app_name/cls_sample/: test_dog.py  test_owner.py  test_person.py
tests/app_name/sub/: test_module2.py
tests/my/: test_app.py  test_module1.py
tests/my/sub/: test_module2.py
