[tool.poetry]
name = "app-name"
version = "0.1.0"
description = "Simple Python project template."
authors = ["mozkzki <mozkzki@gmail.com>"]
maintainers = ["mozkzki <mozkzki@gmail.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/mozkzki/template-python]"
repository = "https://github.com/mozkzki/template-python]"
documentation = "https://github.com/mozkzki/template-python]/wiki"
keywords = ['Python', 'template']
classifiers=[
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
flake8 = "5.0.4"
mypy = "1.2.0"
pytest = "7.3.1"
black = "23.3.0"
pytest-cov = "4.0.0"
coverage = "7.2.3"
isort = "5.12.0"
sphinx = "6.1.3"
sphinx-rtd-theme = "1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
